correction of gap photo n text about

--- a/src/styles/Components/about.scss
+++ b/src/styles/Components/about.scss
@@ -20,10 +20,14 @@
   padding: 270px 50px 0 0;
   animation: showAbout .5s;
   max-height: 100%;
+  @include mixins.menuProjects-notebook1{
+    gap: 31px;
+  }
   @include mixins.notebook2{
     padding: 470px 50px 0 0;
   }
   @include mixins.phone2{
+
     padding: 290px 0 0 0;
     gap: 0;
   }
